@@ -1,6 +1,7 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.24 - 2022-xx-xx =
+* Fix - Empty document is opened when Firefox is set to open PDF file using another program.
 * Fix - Label purchase modal sections getting cut off.
 
 = 1.25.23 - 2022-02-10 =
